--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dayjs": "^1.11.6",
-    "firebase": "^9.14.0",
-    "formik": "^2.2.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "dayjs": "1.11.6",
+    "firebase": "9.14.0",
+    "formik": "2.2.9",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.4.3",
     "react-scripts": "5.0.1",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "uuid": "9.0.0",
+    "web-vitals": "2.1.4",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "concurrently --kill-others \"less-watch-compiler --config less-watcher.config.json\" \"react-scripts start\"",
@@ -44,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^7.5.0",
-    "less": "^4.1.3",
-    "less-watch-compiler": "^1.16.3"
+    "concurrently": "7.5.0",
+    "less": "4.1.3",
+    "less-watch-compiler": "1.16.3"
   }
 }
