--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "dayjs": "1.11.6",
     "firebase": "9.14.0",
     "formik": "2.2.9",
+    "framer-motion": "7.6.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4",
     "yup": "0.32.11"
